--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@emotion/styled": "^10.0.27",
     "gatsby": "^2.21.0",
     "gatsby-plugin-emotion": "^4.3.0",
+    "gatsby-plugin-manifest": "^2.4.3",
+    "gatsby-source-filesystem": "^2.3.3",
+    "gatsby-transformer-remark": "^2.8.8",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
