--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "gatsby": "^2.21.0",
+    "gatsby": "^2.21.33",
     "gatsby-plugin-emotion": "^4.3.0",
     "gatsby-plugin-manifest": "^2.4.3",
+    "gatsby-plugin-offline": "^3.2.2",
+    "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-remark": "^2.8.8",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "prettier": "2.0.5",
