--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gatsby-plugin-manifest": "^2.4.3",
     "gatsby-plugin-offline": "^3.2.2",
     "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sharp": "^2.6.3",
+    "gatsby-remark-images": "^3.3.3",
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-remark": "^2.8.8",
     "normalize.css": "^8.0.1",
