--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "gatsby": "^2.21.33",
+    "gatsby-image": "^2.4.5",
     "gatsby-plugin-emotion": "^4.3.0",
     "gatsby-plugin-manifest": "^2.4.3",
     "gatsby-plugin-offline": "^3.2.2",
@@ -28,6 +29,7 @@
     "gatsby-remark-prismjs": "^3.5.2",
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-remark": "^2.8.8",
+    "gatsby-transformer-sharp": "^2.5.3",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.20.0",
     "prismjs-material-theme": "^1.0.0",
