--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "gatsby-plugin-manifest": "^2.4.3",
     "gatsby-plugin-offline": "^3.2.2",
     "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-sitemap": "^2.4.3",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-remark-images": "^3.3.3",
     "gatsby-remark-prismjs": "^3.5.2",
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-remark": "^2.8.8",
     "gatsby-transformer-sharp": "^2.5.3",
+    "gsap": "^3.2.6",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.20.0",
     "prismjs-material-theme": "^1.0.0",
