--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@deckdeckgo/highlight-code": "^1.0.5",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@reach/router": "^1.3.3",
     "gatsby": "^2.21.33",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-emotion": "^4.3.0",
@@ -36,6 +37,7 @@
     "normalize.css": "^8.0.1",
     "prismjs": "^1.20.0",
     "prismjs-material-theme": "^1.0.0",
+    "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0"
